--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.2",
         "@vueuse/core": "^14.1.0",
+        "aos": "^2.3.4",
+        "sweetalert2": "^11.26.17",
         "vue": "^3.5.25",
         "vue-router": "^4.6.4"
     }
