--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "aos": "^2.3.4",
         "sweetalert2": "^11.26.17",
         "vue": "^3.5.25",
-        "vue-router": "^4.6.4"
+        "vue-router": "^4.6.4",
+        "vue-toast-notification": "^3.1.3"
     }
 }
